[package]
name = "marrow"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
uuid = { version = "1.10.0", features = ["v4"] }
shrek-deck = { version = "0.1.0"}
